# portfolio

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.cjs  .ruff.toml  AGENTS.md  README.md  docker-compose.yaml  eslint.config.mjs  package.json  pnpm-lock.yaml
.github/workflows/: build-images.yml
apps/ankiworker/: .dockerignore  .env.sample  Dockerfile  README.md  anki_activity.py  pyproject.toml  schema.py
apps/api/: Dockerfile  package.json  tsconfig.json
apps/api/src/: index.test.ts  index.ts  middleware.ts  validators.ts
apps/api/src/contracts/: portfolio.ts
apps/api/src/jobs/: job-board.ts  upwork.ts
apps/api/src/schema/: index.ts
apps/collector/: .env.sample  Dockerfile  README.md  anki.py  anki_activity.py  cluster.py  github_activity.py  github_streak.py  portfolio_schema.py  pyproject.toml  schema.py  ytmusic.py
apps/jobber/: Dockerfile  README.md  job-search.gql  pyproject.toml
apps/lyricist/: .dockerignore  .env.sample  Dockerfile  README.md  lyricist.py  manual_analysis.py  migrate_note_urls.py  pyproject.toml  schema.py
apps/lyricist/scripts/: fetch_lrclib_dumps.sh  fetch_saved_lyrics_from_redis.py  manual-analysis-clipboard.sh  manual-analysis-gemini.py
apps/upworker/: .dockerignore  .env.sample  Dockerfile  README.md  __init__.py  __main__.py  connects-freelancer.gql  job-search.gql  pyproject.toml  schema.py  typex.py  upworker_app.py
apps/upworker/docs/: frontend-queries-analysis.md
apps/upworker/scripts/: check-proxies.sh
apps/upworkerbot/: .env.sample  Dockerfile  README.md  __main__.py  pyproject.toml  upworkerbot_app.py
apps/web/: Dockerfile  astro.config.mjs  package.json  site.config.mjs
apps/web/scripts/: gen-og-image.py  generate-git-meta.mjs
apps/web/src/: middleware.ts
apps/web/src/components/: ActivityMonitor.astro  BlurImage.astro  ContactCard.astro  FadeImage.astro  GitCommitsCard.astro  Hero.astro  JobFacts.astro  JobScoutCard.astro  KnowledgeGraph.svelte  KnowledgeGraphCard.astro  LatestUpdatesCard.astro  LiveInfrastructureCard.astro  LyricFlashcardDeck.svelte  LyricNote.svelte  LyricNoteView.astro  LyricNotesList.svelte  PageHero.astro  ProjectGallery.astro  ProjectsShowcaseCard.astro  RoadmapCard.astro  SavedLyricsCard.astro  SignalCard.astro  SiteFooter.astro  SiteNav.astro  SocialLink.svelte  SonicArchivesCard.astro  StatusCard.svelte  StatusOverview.astro  SystemHealthCard.astro  SystemNotesCard.astro  TelemetryCard.astro  WidgetHeader.astro  WritingCard.astro
apps/web/src/config/: site.ts
apps/web/src/content/: config.ts
apps/web/src/content/blog/: notes-to-myself.md  portfolio-pr-environments-argocd.md  pulumi-zero-trust-k3s.md  welcome-to-the-monorepo.md  welcome.md  zero-trust-k3s-with-pulumi.md
apps/web/src/content/projects/: activity-stream-digest.md  anvil-compression.md  asin-scraper.md  deneme-grafik.md  etoro-requester.md  homelab-orchestrator.md  homelab.md  lyric-study-companion.md  mnist-pygame.md  portfolio.md  prompt-lab.md  rapture-robotics-web.md  school-admission-platform.md  upwork-wizard.md
apps/web/src/i18n/: index.ts  translations.ts
apps/web/src/layouts/: Layout.astro
apps/web/src/lib/: activity-monitor.test.ts  activity-monitor.ts  graph-data.ts  jobs-board.ts  system-health.test.ts  system-health.ts
apps/web/src/pages/: contact.astro  health.ts  index.astro  rss.xml.ts  system-status.json.ts
apps/web/src/pages/[lang]/: contact.astro  index.astro  rss.xml.ts
apps/web/src/pages/[lang]/blog/: [slug].astro  index.astro
apps/web/src/pages/[lang]/jobs/: [id].astro  index.astro
apps/web/src/pages/[lang]/lyrics/: [id].astro  index.astro  note.astro
apps/web/src/pages/[lang]/playlist/: [id].astro  index.astro  note.astro
apps/web/src/pages/[lang]/projects/: [slug].astro  index.astro
apps/web/src/pages/api/: activity-monitor.ts
apps/web/src/pages/blog/: [slug].astro  index.astro
apps/web/src/pages/jobs/: [id].astro  index.astro
apps/web/src/pages/lyrics/: [id].astro  index.astro  note.astro
apps/web/src/pages/playlist/: [id].astro  note.astro
apps/web/src/pages/projects/: [slug].astro  index.astro
apps/web/src/schema/: index.ts
apps/web/src/styles/: global.css
apps/web/src/views/: BlogIndexPage.astro  BlogPostPage.astro  ContactPage.astro  HomePage.astro  JobDetailsPage.astro  JobsIndexPage.astro  LyricNotePage.astro  LyricsIndexPage.astro  ProjectDetailsPage.astro  ProjectsIndexPage.astro
deploy/argocd/: README.md
deploy/argocd/applications/: portfolio-local.yaml  portfolio-prod.yaml
deploy/helm/portfolio/: Chart.yaml  README.md  values-prod.yaml  values.yaml
deploy/helm/portfolio/templates/: _helpers.tpl  api.yaml  collector-cronjobs.yaml  db.yaml  upworker-bot.yaml  upworker.yaml  web.yaml
deploy/k8s/: 02-db.yaml  03-api.yaml  04-web.yaml  05-collector-cronjobs.yaml  06-lyricist-cronjob.yaml
docs/: ankiweb-svc-endpoints.md  favicon-gen.md  frontend-data-model.md  homepage-status-line-ideas.md  lyrics-flashcards-manual-pipeline.md  social-card-gen.md  ytmusic-clear-lyrics.md
scripts/: argocd-local-bootstrap.sh  bump-values-prod-tags.py  dev-web-k8s.sh  find-unused-keys.js  k8s-local-api-update.sh  k8s-local-apply.sh  k8s-local-web-update.sh  refine-upwork-curl.py
