[project]
name = "ankiworker"
version = "0.1.0"
description = "Anki-specific collectors (review activity)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "redis>=5.2.1",
  "structlog>=25.1.0",
  "environs>=14.1.1",
  "pydantic>=2.10.6",
  "portfolio-schema",
  "portfolio-common",
  "anki>=25.9.2",
]

[project.scripts]
ankiworker-activity = "anki_activity:main"

[tool.uv]
package = true

[tool.uv.sources]
portfolio-schema = { path = "../../packages/schema-py" }
portfolio-common = { path = "../../packages/common-py" }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["anki_activity", "schema"]
