[project]
name = "collector"
version = "0.1.0"
description = "Personal data collectors (GitHub activity)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "redis>=5.2.1",
  "structlog>=25.1.0",
  "environs>=14.1.1",
  "pydantic>=2.10.6",
  "httpx>=0.27.0",
  "portfolio-schema",
  "portfolio-common",
]

[project.scripts]
collector-github = "github_activity:main"

[tool.uv]
package = true

[tool.uv.sources]
portfolio-schema = { path = "../../packages/schema-py" }
portfolio-common = { path = "../../packages/common-py" }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["github_activity", "schema"]
