[project]
name = "upworker"
version = "0.1.0"
description = "Upwork job ingestion worker."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "redis>=5.2.1",
  "structlog>=25.1.0",
  "simple-pid>=2.0.1",
  "environs>=14.1.1",
  "pydantic>=2.10.6",
  "curl-cffi>=0.7.4",
  "portfolio-schema",
  "playwright>=1.58.0",
]

[project.scripts]
upworker = "upworker_app:main"

[tool.uv]
package = true

[tool.uv.sources]
portfolio-schema = { path = "../../packages/schema-py" }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["__main__", "upworker_app", "schema", "typex"]
