[project]
name = "upworkerbot"
version = "0.1.0"
description = "Telegram bot to manage Upworker auth values in Redis."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "redis>=5.2.1",
  "structlog>=25.1.0",
  "environs>=14.1.1",
  "curl-cffi>=0.7.4",
]

[project.scripts]
upworkerbot = "__main__:main"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["__main__"]

